# PyNeuron

./: LICENSE  example.py  pyproject.toml
examples/: logical_and.py
neuron/core/: __init__.py  neuron.py
neuron/functions/: __init__.py  activations.py
neuron/layers/: __init__.py  perceptron.py
neuron/utils/: __init__.py  callbacks.py  linalg.py  random.py  stats.py
